Added group subscription cost splitting functionality.

--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/group_subscription.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/group_subscription.xml
@@ -259,6 +259,7 @@
                                 android:paddingLeft="10dp"/>
 
                             <TextView
+                                android:id="@+id/split_user_cost_0"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:paddingRight="10dp"
@@ -287,6 +288,7 @@
                                 android:paddingLeft="10dp"/>
 
                             <TextView
+                                android:id="@+id/split_user_cost_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:paddingRight="10dp"
@@ -315,6 +317,7 @@
                                 android:paddingLeft="10dp"/>
 
                             <TextView
+                                android:id="@+id/split_user_cost_2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:paddingRight="10dp"
@@ -343,6 +346,7 @@
                                 android:paddingLeft="10dp"/>
 
                             <TextView
+                                android:id="@+id/split_user_cost_3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:paddingRight="10dp"
@@ -371,6 +375,7 @@
                                 android:paddingLeft="10dp"/>
 
                             <TextView
+                                android:id="@+id/split_user_cost_4"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:paddingRight="10dp"
