--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/popup_window.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/popup_window.xml
@@ -125,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Netflix (I), Amazon Prime (!), Chegg (G)"
+                android:text="Netflix (I), Amazon Prime (I), Chegg (G)"
                 android:textSize="15dp"
                 android:textColor="@color/black">
 
