--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/activity_add_member.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/activity_add_member.xml
@@ -81,6 +81,7 @@
             android:layout_marginEnd="17dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="4dp"
+            android:background="@color/theme"
             android:orientation="horizontal">
             <ImageButton
                 android:id="@+id/individual_subscription_button"
