--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/dm_board.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/dm_board.xml
@@ -83,7 +83,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:drawableLeft="@drawable/profilesmall">
+                    android:drawableStart="@drawable/profilesmall">
                 </Button>
 
                 <LinearLayout
