--- a/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/subscriptions.xml
+++ b/CS465SubSplitFunctionalPrototypeIndividual/app/src/main/res/layout/subscriptions.xml
@@ -69,11 +69,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants">
         <ListView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </ListView>
+        </RelativeLayout>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
